# yoimiya4.o

./: start.bat
assets/: untitled.fbx
assets/models/animation/: Catwalk Walk Turn 180 Tight.fbx  rumba.fbx
backend/: pyproject.toml
backend/test/: anothertest.py
backend/yomiya_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: package-lock.json  package.json  test
frontend/src/: App.css  App.jsx  global.css
frontend/src/components/: AccountLogo.jsx  InputSection.jsx  InteractiveChatProp.jsx  ModelViewer.jsx
frontend/src/components/styles/: ChatHistory.css  account.css
